/*
  Core enumerations.
*/

syntax = "proto3";

package core_enums;

option java_package="plus_modeled";

/*
  Language selector for the i18n supported languages
*/
enum LangSelector {
  /*
    US English
  */
  US_ENGLISH = 0;
  
  /*
    French
  */
  FRENCH = 1;
  
  /*
    German
  */
  GERMAN = 2;
}

/*
  Enumerate the currencies supported.
*/
enum Currency {
  /*
    United States Dollar
  */
  USD = 0;
  
  /*
    Euro
  */
  EUR = 1;
  
  /*
    Japanese Yen
  */
  JPY = 2;
  
  /*
    United Kingdom Pound
  */
  GBP = 3;
  
  /*
    Australian Dollar
  */
  AUD = 4;
  
  /*
    Canadian Dollar
  */
  CAD = 5;
  
  /*
    Swiss Franc
  */
  CHF = 6;
  
  /*
    China Yuan Renminbi
  */
  CNY = 7;
  
  /*
    Hong Kong Dollar
  */
  HKD = 8;
  
  /*
    New Zealand Dollar
  */
  NZD = 9;
  
  /*
    Costa Rica Colon
  */
  CRC = 10;
  
  /*
    Russian Ruble
  */
  RUB = 11;
  
  /*
    South Korean Won
  */
  KRW = 12;
  
  /*
    Swedish Krona
  */
  SEK = 13;
}

/*
  Used to determine treatment of gains and in some cases (e.g. 529) how funds should be used.
*/
enum AccountType {
  /*
    A tax sheltered account with funds whose taxes have been paid.
  */
  ROTH_IRS_401_K = 0;
  
  /*
    A tax sheltered account for funds taxed in retirement.
  */
  TRADITIONAL_IRS_401_K = 1;
  
  /*
    A tax sheltered account for qualified education expenses.
  */
  COLLEGE_IRS_529 = 2;
  
  /*
    A tax sheltered account with funds taxed in retirement
  */
  TRADITIONAL_IRA = 3;
  
  /*
    An account whose investment returns are taxable.
  */
  TAXABLE = 4;
  
  /*
    An account that allow a relatively quick access to funds, including checking, savings.
  */
  DEMAND = 5;
  
  /*
    A tax sheltered account for qualified medical expenses.
  */
  HEALTH_SAVINGS_ACCOUNT = 6;
  
  /*
    An account not covered by other types.
  */
  OTHER_ACCOUNT_TYPE = 7;
}

/*
  To identify holdings as one of the basic allocaiton types.
*/
enum BasicAllocationType {
  /*
    None of the above.
  */
  OTHER_BASIC_ALLOCATION_TYPE = 0;
  
  /*
    Instrument is stock like.
  */
  STOCK = 1;
  
  /*
    Instrument is bond like.
  */
  BOND = 2;
  
  /*
    Instrument is cash like.
  */
  CASH = 3;
}

/*
  Identifies holding as capable of generating distributions.
*/
enum DistributionInstrument {
  /*
    A single stock that may pay dividends.
  */
  EQUITY = 0;
  
  /*
    A instrument (e.g. bond) that pays interest.
  */
  INTEREST_BEARING = 1;
  
  /*
    An instrument that may *distribute* dividends, interest, and/or capital gains
  */
  MUTUAL_FUND = 2;
}

/*
  Specifies the type of distribution
*/
enum DistributionInstrumentType {
  /*
    Distribution type not specified
  */
  DIST_UNKNOWN = 0;
  
  /*
    Distribution for stock - which pays dividends
  */
  DIST_EQUITY = 1;
  
  /*
    Distribution type for a bond which may pay interest
  */
  DIST_BOND = 2;
  
  /*
    Distribution type for a mutual fund which may _distribute_ 
    dividends, interest and/or capital gains
  */
  DIST_MUTUAL_FUND = 3;
}

/*
  
  Dictates how the forecaster will treat accounts in terms of taxes.
  
  The default is `as_modeled` so all taxation is based on account types.
  If `as_tax_deferred` the forecaster ignores all account type designations
  and treats all accounts as deferred. Similarly `as_taxable` treats all
  accounts as taxable and `as_tax_exempt` treats all accounts as tax exempt.
  The purpose of these is to get a quick view of how taxes are impacting
  the forecast.
*/
enum ForecastTaxTreatment {
  /*
    Treat taxes as modeled by accounts.
  */
  AS_MODELED = 0;
  
  /*
    Treat all accounts as if `Taxable`
  */
  AS_TAXABLE = 1;
  
  /*
    Treat all accounts as if `TaxDeferred`.
  */
  AS_TAX_DEFERRED = 2;
  
  /*
    Treat all accounts as if `TaxExempt`
  */
  AS_TAX_EXEMPT = 3;
}

/*
  Direction of flow from perspective of balance sheet.
*/
enum FlowDirection {
  /*
    Indicates flow direction depends on sign.
  */
  UNSPECIFIED_FLOW = 0;
  
  /*
    Indicates flows are incoming.
  */
  IN_FLOW = 1;
  
  /*
    Indicates flows are outgoing.
  */
  OUT_FLOW = 2;
  
  /*
    Indicates flows are leaving one place and entering another.
  */
  INTERNAL_FLOW = 3;
}

/*
  Used to categorize people covered by `Dossier`.
*/
enum PersonType {
  /*
    Primary owner of the dossier.
  */
  PRIMARY_OWNER = 0;
  
  /*
    Secondary owner of the dossier.
  */
  SECONDARY_OWNER = 1;
  
  /*
    Dependent to primary owner.
  */
  DEPENDENT = 2;
}

/*
  Used to discriminate between `worth`, `holding`, `instrument`, and `flow`.
*/
enum DossierItemType {
  /*
    Indicates a _Worth_.
  */
  WORTH = 0;
  
  /*
    Indicates a _Holding_.
  */
  HOLDING = 1;
  
  /*
    Indicates an _Instrument_.
  */
  INSTRUMENT = 2;
  
  /*
    Indicates a _Flow_.
  */
  FLOW = 3;
}

/*
  Identifies type of year market.
*/
enum ForecastYearMarkerType {
  /*
    Indicates the user has inadequate funds.
  */
  FIRST_INSOLVENCY = 0;
  
  /*
    Indicates user retirement start.
  */
  RETIREMENT_START = 1;
  
  /*
    Indicates year of death of user.
  */
  DEATH = 2;
}

/*
  Filing status for taxes.
*/
enum TaxUsFilingStatus {
  /*
    Married filing jointly.
  */
  MARRIED_JOINT = 0;
  
  /*
    Married filing separately.
  */
  MARRIED_SEPARATE = 1;
  
  /*
    Single filing status.
  */
  SINGLE = 2;
  
  /*
    Filing as head of household.
  */
  HEAD_OF_HOUSEHOLD = 3;
}

/*
  Categorizes taxes according to the schedules that might be used.
*/
enum TaxUsCategory {
  /*
    Social security taxes.
  */
  US_SOCIAL_SECURITY = 0;
  
  /*
    Medicare taxes.
  */
  US_MEDICARE = 1;
  
  /*
    Qualified dividend taxes.
  */
  US_QUALIFIED_DIVIDEND = 2;
  
  /*
    Long term capital gain taxes.
  */
  US_LONG_TERM_CAPITAL_GAIN = 3;
  
  /*
    Passive income taxes.
  */
  US_PASSIVE_INCOME = 4;
  
  /*
    A type of ordinary income from labor
  */
  US_EARNED_INCOME = 5;
  
  /*
    Ordinary income taxes.
  */
  US_ORDINARY_INCOME = 6;
}

/*
  Classification of account with respect to taxation.
*/
enum TaxTreatment {
  /*
    An account whose income is taxable.
  */
  TAXABLE_ACCOUNT = 0;
  
  /*
    An account with income taxed on withdrawal.
  */
  TAX_DEFERRED_ACCOUNT = 1;
  
  /*
    An account where income is not taxed, usually because it is special purpose like college 529.
  */
  TAX_EXEMPT_ACCOUNT = 2;
}

/*
  Enumerate the sort criteria for forecasts in a simulation.
*/
enum ForecastSortCriteria {
  /*
    Sort forecasts by `final end balance`.
  */
  BY_FINAL_END_BALANCE = 0;
}

/*
  Country supported by the system.
*/
enum Country {
  /*
    United States Of America
  */
  UNITED_STATES = 0;
  
  /*
    France
  */
  FRANCE = 1;
  
  /*
    United Kingdom
  */
  UNITED_KINGDOM = 2;
}

/*
  State of residence
*/
enum StateOfResidence {
  /*
    Unspecified state.
  */
  NONE = 0;
  
  /*
    State of `AL`
  */
  AL = 1;
  
  /*
    State of `AK`
  */
  AK = 2;
  
  /*
    State of `AZ`
  */
  AZ = 3;
  
  /*
    State of `AR`
  */
  AR = 4;
  
  /*
    State of `CA`
  */
  CA = 5;
  
  /*
    State of `CO`
  */
  CO = 6;
  
  /*
    State of `CT`
  */
  CT = 7;
  
  /*
    State of `DE`
  */
  DE = 8;
  
  /*
    State of `FL`
  */
  FL = 9;
  
  /*
    State of `GA`
  */
  GA = 10;
  
  /*
    State of `HI`
  */
  HI = 11;
  
  /*
    State of `ID`
  */
  ID = 12;
  
  /*
    State of `IL`
  */
  IL = 13;
  
  /*
    State of `IN`
  */
  IN = 14;
  
  /*
    State of `IA`
  */
  IA = 15;
  
  /*
    State of `KS`
  */
  KS = 16;
  
  /*
    State of `KY`
  */
  KY = 17;
  
  /*
    State of `LA`
  */
  LA = 18;
  
  /*
    State of `ME`
  */
  ME = 19;
  
  /*
    State of `MD`
  */
  MD = 20;
  
  /*
    State of `MA`
  */
  MA = 21;
  
  /*
    State of `MI`
  */
  MI = 22;
  
  /*
    State of `MN`
  */
  MN = 23;
  
  /*
    State of `MS`
  */
  MS = 24;
  
  /*
    State of `MO`
  */
  MO = 25;
  
  /*
    State of `MT`
  */
  MT = 26;
  
  /*
    State of `NE`
  */
  NE = 27;
  
  /*
    State of `NV`
  */
  NV = 28;
  
  /*
    State of `NH`
  */
  NH = 29;
  
  /*
    State of `NJ`
  */
  NJ = 30;
  
  /*
    State of `NM`
  */
  NM = 31;
  
  /*
    State of `NY`
  */
  NY = 32;
  
  /*
    State of `NC`
  */
  NC = 33;
  
  /*
    State of `ND`
  */
  ND = 34;
  
  /*
    State of `OH`
  */
  OH = 35;
  
  /*
    State of `OK`
  */
  OK = 36;
  
  /*
    State of `OR`
  */
  OR = 37;
  
  /*
    State of `PA`
  */
  PA = 38;
  
  /*
    State of `RI`
  */
  RI = 39;
  
  /*
    State of `SC`
  */
  SC = 40;
  
  /*
    State of `SD`
  */
  SD = 41;
  
  /*
    State of `TN`
  */
  TN = 42;
  
  /*
    State of `TX`
  */
  TX = 43;
  
  /*
    State of `UT`
  */
  UT = 44;
  
  /*
    State of `VT`
  */
  VT = 45;
  
  /*
    State of `VA`
  */
  VA = 46;
  
  /*
    State of `WA`
  */
  WA = 47;
  
  /*
    State of `WV`
  */
  WV = 48;
  
  /*
    State of `WI`
  */
  WI = 49;
  
  /*
    State of `WY`
  */
  WY = 50;
}

/*
  A small set of commonly identifiable rate curves
*/
enum NamedRateCurve {
  /*
    Identifies the curve with no growth.
  */
  NO_GROWTH_CURVE = 0;
  
  /*
    Identifies the established inflation rate to be used.
                        Inflation of specific items is often modeled with a specific type of inflation.
                        For example, the cost of college is growing faster than general inflation.
                        So, if all or almost all `flows` grow at their own individual rates there really
                        is no single _inflation_.
                        
                        However, there are times where it is useful to have a single standard inflation to discount values.
                        When a forecast provides a single final net worth it is in future dollars and for it to be more
                        digestible it is useful to show in present value terms. Since that net worth is a combination of
                        lots of expenses that have potentially many different built in inflation numbers - having one to
                        curve to provide a general discount mechanism is useful.
  */
  REPORT_INFLATION = 1;
  
  /*
    A discount curve that can be used to charge borrowing done by a user to stay afloat.
    There are times when a forecast takes the person under water and it looks like game over.
    However, future inflows might save the day and rather than just immediately throw in the
    towel, that under water amount can grow at a _cost of capital_ in hopes of forecast
    recovery.
  */
  COST_OF_CAPITAL = 2;
}

/*
  List of plusauri worth types.
*/
enum WorthType {
  /*
    Any form of residential real estate.
  */
  RESIDENTIAL_REAL_ESTATE = 0;
  
  /*
    Any form of commercial real estate.
  */
  COMMERCIAL_REAL_ESTATE = 1;
  
  /*
    Family Farm
  */
  FAMILY_FARM = 2;
  
  /*
    A car, truck, etc
  */
  AUTOMOBILE = 3;
  
  /*
    A car that is 20 years or older.
  */
  CLASSIC_CAR = 4;
  
  /*
    A car that is 45 years or older.
  */
  ANTIQUE_CAR = 5;
  
  /*
    A car built between 1919 and 1930.
  */
  VINTAGE_CAR = 6;
  
  /*
    A boat
  */
  BOAT = 7;
  
  /*
    Toys
  */
  TOYS = 8;
  
  /*
    An _atypical_ worth not, represented by other categories.
  */
  OTHER_WORTH = 9;
}

/*
  List of plusauri holding types.
*/
enum HoldingType {
  /*
    A sample instrument from the US equity market.
  */
  US_EQUITY_SAMPLE = 0;
  
  /*
    Well diversified instrument representing US equities, including large, small, mid caps.
  */
  US_EQUITY_MARKET = 1;
  
  /*
    US Large cap equity market
  */
  US_LARGE_EQUITY_MARKET = 2;
  
  /*
    Individual equity from us large cap equity market.
  */
  US_LARGE_EQUITY_SAMPLE = 3;
  
  /*
    Sample small cap US equity
  */
  US_SMALL_EQUITY_MARKET = 4;
  
  /*
    Sample from US small cap equities.
  */
  US_SMALL_EQUITY_SAMPLE = 5;
  
  /*
    ETF or similar diversified instrument representing US mid-caps (e.g. `Vanguard Mid-Cap - VO`).
  */
  US_MID_EQUITY_MARKET = 6;
  
  /*
    Sample from US midcaps.
  */
  US_MID_EQUITY_SAMPLE = 7;
  
  /*
    ETF or similar diversified instrument representing emerging markets (e.g. iShares MSCI Emerging Markets - `EEM`)
  */
  EMERGING_EQUITY_MARKET = 8;
  
  /*
    A single instrument from the emerging markets category of stocks.
  */
  EMERGING_EQUITY_MARKET_SAMPLE = 9;
  
  /*
    Gold as an investment, physical or ETF
  */
  GOLD = 10;
  
  /*
    Treasury Inflation Protected Securities
  */
  TIPS = 11;
  
  /*
    Investments in real estate.
  */
  REAL_ESTATE = 12;
  
  /*
    Developed Markets - proxied by `VTMGX`
    Vanguard Developed Markets Index Fund seeks to track the performance of the FTSE Developed All Cap ex 
    US Index, a market-capitalization-weighted index that is made up of approximately 3,700 common stocks 
    of large-, mid-, and small-cap companies located in Canada and the major markets of Europe and the 
    Pacific region. The fund attempts to replicate the target index by investing all, or substantially 
    all, of its assets in the stocks that make up the index, holding each stock in approximately the same 
    proportion as its weighting in the index. Vanguard’s Equity Index Group uses proprietary software to 
    implement trading decisions that accommodate cash flows and maintain close correlation with index 
    characteristics. Vanguard’s refined indexing process, combined with low management fees and efficient 
    trading, has provided tight tracking net of expenses.
  */
  DEVELOPED_MARKETS = 13;
  
  /*
    An instrument in the _developed markets_ domain.
  */
  DEVELOPED_MARKETS_SAMPLE = 14;
  
  /*
    US High Yield Bonds
  */
  US_HIGH_YIELD_BONDS = 15;
  
  /*
    Commodities
  */
  COMMODITIES = 16;
  
  /*
    Long term treasury average maturity of 15–30 years - proxied by `VUSUX`.
  */
  US_LONG_TERM_TREASURY = 17;
  
  /*
    Intermediate term treasury average maturity of 1-10 years - proxied by `VSIGX`.
  */
  US_INTERMEDIATE_TERM_TREASURY = 18;
  
  /*
    Short term treasury average maturity of 1-4 years - proxied by `VFIRX`.
  */
  US_SHORT_TERM_TREASURY = 19;
  
  /*
    Short duration corporate bonds - proxied by `VCSH` 
  */
  US_SHORT_TERM_CORPORATE_BOND = 20;
  
  /*
    Long term corporate bonds - proxied by `VCLT`
  */
  US_LONG_TERM_CORPORATE_BOND = 21;
  
  /*
    Money market fund - proxied by `VMFXX`
  */
  US_MONEY_MARKET = 22;
  
  /*
    International bonds - proxied by `VTABX`.
  */
  INTERNATIONAL_BONDS = 23;
  
  /*
    Basic CD - typical cash instrument
  */
  CERTIFICATE_OF_DEPOSIT = 24;
  
  /*
    An instrument not represented by other categories.
  */
  OTHER_INSTRUMENT = 25;
}

/*
  List of plusauri flow types.
*/
enum FlowType {
  /*
    Money earned from a job - wages, salaries, tips etc
  */
  EARNED_INCOME = 0;
  
  /*
    Money from pension
  */
  PENSION_INCOME = 1;
  
  /*
    Money from social security
  */
  SOCIAL_SECURITY_INCOME = 2;
  
  /*
    Money from rental properties - passive income
  */
  RENTAL_INCOME = 3;
  
  /*
    Money from royalties such as music, books, manuscripts, computer software, or a patent
  */
  ROYALTY_INCOME = 4;
  
  /*
    Money from internet advertising - passive income
  */
  INTERNET_ADVERTISING_INCOME = 5;
  
  /*
    Money from business you are not actively involved in - passive income
  */
  PASSIVE_BUSINESS_INCOME = 6;
  
  /*
    Money classified as ordinary income for tax purposes
  */
  ORDINARY_INCOME = 7;
  
  /*
    General cost of living
  */
  LIVING_EXPENSE = 8;
  
  /*
    Costs associated with health care
  */
  HEALTH_CARE_EXPENSE = 9;
  
  /*
    Cost of college which historically has grown faster than inflation
  */
  COLLEGE_EXPENSE = 10;
  
  /*
    Property taxes, which may be deductible.
    Property taxes may be deductible if you itemize, but a limit comes into play.
    
    Under a massive tax overhaul that was signed into law in 2017, deductible state and local income taxes 
    (SALT), including property taxes, are capped at $10,000.
    
    The limit is scheduled to last through the 2025 tax year, unless Congress extends it.
  */
  PROPERTY_TAXES = 11;
  
  /*
    Mortgage interest, which may be deductible.
    From [_Forbe's_ article](https://www.forbes.com/advisor/taxes/tax-write-offs-you-can-claim-on-your-taxes/)
    The interest you pay for your mortgage can be deducted from your taxes. The write-off is limited to interest 
    on up to $750,000 ($375,000 for married-filing-separately taxpayers) of mortgage debt incurred 
    after Dec. 15, 2017.
  */
  MORTGAGE_INTEREST = 12;
  
  /*
    State taxes paid, which may be deductible.
    you can deduct state income taxes that are paid, but the write-off is limited to up to $10,000, 
    which includes all deductible state and local taxes.
  */
  STATE_TAXES_PAID = 13;
  
  /*
    Charitable donations, which may be deductible.
    From [_Forbe's_ article](https://www.forbes.com/advisor/taxes/tax-write-offs-you-can-claim-on-your-taxes/)
    Generally, you can deduct charitable contributions of cash totaling up to 60% of your adjusted gross income,
    or AGI. Donations of items or property also are considered deductible charitable contributions.
  */
  CHARITABLE_DONATIONS = 14;
  
  /*
    Medical expenses, which may be deductible.
    From [_Forbe's_ article](https://www.forbes.com/advisor/taxes/tax-write-offs-you-can-claim-on-your-taxes/)
    Medical and dental expenses qualify for a tax deduction, though you can deduct only the costs that exceed 
    7.5% of your AGI.
    To claim medical-related expenses on your 2022 tax return next year, they must have been paid in 2022, unless 
    they were charged to a credit card. In those cases, you can deduct the expenses in the year you charged the 
    card, not necessarily the year in which you repaid them.
    
    Trips to your doctor’s office or hospital appointments qualify for medical mileage. For 2022, you can deduct 
    18 cents a mile for travel you made for medical purposes through June 2022. The amount has increased to 22 
    cents a mile from July 1, 2022, through the end of the year.
  */
  MEDICAL_EXPENSES = 15;
  
  /*
    Retirement credits, which may be deductible.
    From [_Forbe's_ article](https://www.forbes.com/advisor/taxes/tax-write-offs-you-can-claim-on-your-taxes/)
    The contributions you make to a retirement plan such as a 401(k) or a traditional or Roth IRA give you a tax 
    credit of 50%, 20% or 10%, depending on your adjusted gross income that you report on Form 1040. Any rollover 
    contributions do not qualify for the credit.
    
    The maximum contribution amount that qualifies for the credit is $2,000 ($4,000 if married filing 
    jointly), making the maximum possible credit $1,000 ($2,000 if married filing jointly). The IRS has 
    a chart to help calculate your credit.
  */
  RETIREMENT_CREDITS = 16;
  
  /*
    IRA contributions, which may be deductible.
    From [_Forbe's_ article](https://www.forbes.com/advisor/taxes/tax-write-offs-you-can-claim-on-your-taxes/)
    The maximum contribution for 2022 in a traditional or Roth IRA is $6,000, plus another $1,000 for 
    people who are 50 years old or more. Your contributions to a traditional IRA are tax-deductible.
  */
  IRA_CONTRIBUTIONS = 17;
  
  /*
    An _atypical_ in flow not represented by other categories
  */
  OTHER_IN_FLOW = 18;
  
  /*
    An _atypical_ out flow not represented by other categories
  */
  OTHER_OUT_FLOW = 19;
}